--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
+    "nodemon": "^2.0.19",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
